@@ -1,3 +1,8 @@
+2007-08-25  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-utils.c: escape slashes when selecting text and
+	searching for it in the document. Fixes bug #443956.
+
 2007-08-23  Paolo Borelli  <pborelli@katamail.com>
 
 	* plugins/filebrowser/gedit-file-bookmarks-store.c: use
